# TradePilot

./: .dockerignore  .gitignore  ALPACA_SETUP.md  ALWAYS_ON.md  LICENSE  LOCAL_SETUP.md  Makefile  README.md  SAFETY.md  dev.sh
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/auto_trade/: __init__.py  loop.py  option_exit.py  watchlist.py
backend/app/backtest/: __init__.py  gate.py  harness.py
backend/app/brokers/: alpaca_broker.py  base.py  factory.py  ibkr_broker.py  paper_broker.py
backend/app/core/: http.py  logging.py  settings.py
backend/app/data/: alpaca_provider.py  base.py  factory.py  mock_provider.py  yahoo_provider.py
backend/app/database/: models.py  session.py
backend/app/market/: __init__.py  session.py
backend/app/models/: domain.py
backend/app/options/: scanner.py
backend/app/paper_trading/: engine.py
backend/app/risk/: loader.py  manager.py  runtime.py
backend/app/services/: auto_trader.py  order_journal.py  position_monitor.py  research_service.py  sec_filings.py  signal_service.py
backend/app/strategies/: __init__.py  advanced.py  alpaca_auto.py  base.py  gamma_scalp.py  (+9 more)
backend/tests/: conftest.py  test_api_smoke.py  test_broker_factory.py  test_live_safety.py  test_market_session.py  test_option_exit.py  test_options_scanner.py  test_paper_engine.py  test_risk.py  test_risk_loader.py  test_risk_manager.py  test_signal_service.py  test_strategies.py  test_supply_demand.py  test_watchlist.py
(+73 files in other folders)
