[project]
name = "tradebot"
version = "0.1.0"
description = "Trading bot platform — stocks & options"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "alpaca-py>=0.30.0",
    "ta>=0.11",
    "scipy>=1.12",
    "aiohttp>=3.9",
    "ib-insync>=0.9.86",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "yfinance>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "freezegun>=1.5.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
